--- a/catalog/gcloud.yaml
+++ b/catalog/gcloud.yaml
@@ -10,3 +10,5 @@ steps:
 serviceAccount: $SERVICE_ACCOUNT
 options:
   logging: CLOUD_LOGGING_ONLY
+substitutions:
+  _GCLOUD_AUTH_COMMAND: '${body.substitutions.command}'
