--- a/catalog/gcloud.yaml
+++ b/catalog/gcloud.yaml
@@ -11,4 +11,4 @@ serviceAccount: $SERVICE_ACCOUNT
 options:
   logging: CLOUD_LOGGING_ONLY
 substitutions:
-  _GCLOUD_AUTH_COMMAND: '$(body.substitutions.command)'
+  _GCLOUD_AUTH_COMMAND: 'test'
