--- a/catalog/gcloud.yaml
+++ b/catalog/gcloud.yaml
@@ -7,6 +7,7 @@ steps:
         echo "Executing: gcloud $_GCLOUD_AUTH_COMMAND"
         gcloud $_GCLOUD_AUTH_COMMAND
     id: "gcloud-command"
+serviceAccount: $SERVICE_ACCOUNT
 options:
   logging: CLOUD_LOGGING_ONLY
   substitution_option: ALLOW_LOOSE
